<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E2EA"
    android:backgroundTint="#226320">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/restaurant"
        android:scaleType="centerCrop"
        />


    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/balthazar"
        android:text="My Restaurants"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/colorTextIcons"
        android:textSize="50sp"
        android:textStyle="bold"
        app:lineHeight="25px" />


    <Button
        android:id="@+id/findRestaurantsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#1F4545"
        android:text="Find Restaurants"
        android:textColor="@color/colorTextIcons" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findRestaurantsButton"
        android:layout_marginBottom="24dp"
        android:background="@color/colorTextIcons"
        android:hint="Enter Address"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:layout_centerHorizontal="true"  />


</RelativeLayout>